--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
-name = "modtorio"
-version = "0.1.0"
 authors = ["Spanfile <spansdev@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "modtorio"
+version = "0.1.0"
 
 [dependencies]
+anyhow = "1.0.28"
+serde_json = "1.0.51"
+
+[dependencies.serde]
+features = ["derive"]
+version = "1.0.106"
