--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.28"
 serde_json = "1.0.51"
+zip = "0.5.5"
+glob = "0.3.0"
 
 [dependencies.serde]
-features = ["derive"]
 version = "1.0.106"
+features = ["derive"]
+
+[dependencies.semver]
+version = "0.9.0"
+features = ["serde"]
