--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -9,6 +9,8 @@ anyhow = "1.0.28"
 serde_json = "1.0.51"
 zip = "0.5.5"
 glob = "0.3.0"
+regex = "1.3.7"
+lazy_static = "1.4.0"
 
 [dependencies.serde]
 version = "1.0.106"
@@ -20,3 +22,6 @@ features = ["serde"]
 
 [dependencies.macros]
 path = "../macros"
+
+[dependencies.ext]
+path = "../ext"
