--- a/crates/util/Cargo.toml
+++ b/crates/util/Cargo.toml
@@ -1,26 +1,14 @@
 [package]
+name = "util"
+version = "0.1.0"
 authors = ["Spanfile <spansdev@gmail.com>"]
 edition = "2018"
-name = "modtorio"
-version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.28"
-serde_json = "1.0.51"
-zip = "0.5.5"
-glob = "0.3.0"
 regex = "1.3.7"
 lazy_static = "1.4.0"
 
 [dependencies.serde]
 version = "1.0.106"
 features = ["derive"]
-
-[dependencies.macros]
-path = "../macros"
-
-[dependencies.ext]
-path = "../ext"
-
-[dependencies.util]
-path = "../util"
