--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -6,21 +6,14 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.28"
+serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 zip = "0.5.5"
 glob = "0.3.0"
 regex = "1.3.7"
 lazy_static = "1.4.0"
-
-[dependencies.serde]
-version = "1.0.106"
-features = ["derive"]
-
-[dependencies.macros]
-path = "../macros"
-
-[dependencies.ext]
-path = "../ext"
-
-[dependencies.util]
-path = "../util"
+fern = { version = "0.6.0", features = ["colored"] }
+log = "0.4.8"
+macros = { path = "../macros" }
+ext = { path = "../ext" }
+util = { path = "../util" }
