--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -14,9 +14,10 @@ regex = "1.3.7"
 lazy_static = "1.4.0"
 fern = { version = "0.6.0", features = ["colored"] }
 log = "0.4.8"
-isahc = { version = "0.9.1", features = ["json"] }
 url = "2.1.1"
-http = "0.2.1"
+bytes = "0.5.4"
+reqwest = { version = "0.10.4", features = ["json"] }
+tokio = { version = "0.2.18", features = ["full"] }
 macros = { path = "../macros" }
 ext = { path = "../ext" }
 util = { path = "../util" }
