--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 anyhow = "1.0.28"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
+serde_with = "1.4.0"
 zip = "0.5.5"
 glob = "0.3.0"
 regex = "1.3.7"
@@ -18,6 +19,9 @@ url = "2.1.1"
 bytes = "0.5.4"
 reqwest = { version = "0.10.4", features = ["json"] }
 tokio = { version = "0.2.18", features = ["full"] }
+envy = "0.4.1"
+dotenv = "0.15.0"
+
 macros = { path = "../macros" }
 ext = { path = "../ext" }
 util = { path = "../util" }
