--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -19,6 +19,7 @@ url = "2.1.1"
 bytes = "0.5.4"
 reqwest = { version = "0.10.4", features = ["json"] }
 tokio = { version = "0.2.18", features = ["full"] }
+futures = "0.3.4"
 envy = "0.4.1"
 dotenv = "0.15.0"
 
