--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -23,6 +23,8 @@ futures = "0.3.4"
 envy = "0.4.1"
 dotenv = "0.15.0"
 async-trait = "0.1.30"
+tempfile = "3.1.0"
+chrono = { version = "0.4.11", features = ["serde"] }
 
 macros = { path = "../macros" }
 util = { path = "../util" }
