--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1.0.28"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 serde_with = "1.4.0"
-zip = "0.5.5"
+zip = { git = "https://github.com/Spanfile/zip-rs.git" }
 glob = "0.3.0"
 regex = "1.3.7"
 lazy_static = "1.4.0"
