--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.28"
 serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.51"
+serde_json = "1.0.52"
 serde_with = "1.4.0"
 zip = { git = "https://github.com/Spanfile/zip-rs.git" }
 glob = "0.3.0"
@@ -18,13 +18,14 @@ log = "0.4.8"
 url = "2.1.1"
 bytes = "0.5.4"
 reqwest = { version = "0.10.4", features = ["json"] }
-tokio = { version = "0.2.18", features = ["full"] }
+tokio = { version = "0.2.20", features = ["full"] }
 futures = "0.3.4"
 envy = "0.4.1"
 dotenv = "0.15.0"
 async-trait = "0.1.30"
 tempfile = "3.1.0"
 chrono = { version = "0.4.11", features = ["serde"] }
+bytesize = "1.0.0"
 
 macros = { path = "../macros" }
 util = { path = "../util" }
