--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -27,5 +27,7 @@ tempfile = "3.1.0"
 chrono = { version = "0.4.11", features = ["serde"] }
 bytesize = "1.0.0"
 diesel = { version = "1.4.4", features = ["sqlite"] }
+num-traits = "0.2.11"
+num-derive = "0.3.0"
 
 macros = { path = "../macros" }
