--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -5,29 +5,29 @@ name = "modtorio"
 version = "0.1.0"
 
 [dependencies]
-anyhow = "1.0.28"
-serde = { version = "1.0.110", features = ["derive"] }
-serde_json = "1.0.53"
+anyhow = "1.0.31"
+serde = { version = "1.0.111", features = ["derive"] }
+serde_json = "1.0.55"
 serde_with = "1.4.0"
 zip = { git = "https://github.com/Spanfile/zip-rs.git" }
 glob = "0.3.0"
-regex = "1.3.7"
+regex = "1.3.9"
 lazy_static = "1.4.0"
 fern = { version = "0.6.0", features = ["colored"] }
 log = "0.4.8"
 url = "2.1.1"
 bytes = "0.5.4"
-reqwest = { version = "0.10.4", features = ["json"] }
-tokio = { version = "0.2.20", features = ["full"] }
+reqwest = { version = "0.10.6", features = ["json"] }
+tokio = { version = "0.2.21", features = ["rt-threaded", "sync", "macros", "fs", "blocking"] }
 futures = "0.3.5"
 envy = "0.4.1"
 dotenv = "0.15.0"
-async-trait = "0.1.30"
+async-trait = "0.1.35"
 tempfile = "3.1.0"
 chrono = { version = "0.4.11", features = ["serde"] }
-bytesize = "1.0.0"
-diesel = { version = "1.4.4", features = ["sqlite"] }
-num-traits = "0.2.11"
+bytesize = "1.0.1"
+diesel = { version = "1.4.5", features = ["sqlite"] }
+num-traits = "0.2.12"
 num-derive = "0.3.0"
 
 macros = { path = "../macros" }
