--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -28,5 +28,9 @@ bytesize = "1.0.1"
 rusqlite = "0.23.1"
 num-traits = "0.2.12"
 num-derive = "0.3.0"
+strum = "0.18.0"
+strum_macros = "0.18.0"
+sha2 = "0.9.1"
+hex = "0.4.2"
 
 macros = { path = "../macros" }
