--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -25,7 +25,7 @@ async-trait = "0.1.36"
 tempfile = "3.1.0"
 chrono = { version = "0.4.11", features = ["serde"] }
 bytesize = "1.0.1"
-rusqlite = "0.23.1"
+rusqlite =  { version = "0.23.1", features = ["chrono"] }
 num-traits = "0.2.12"
 num-derive = "0.3.0"
 strum = "0.18.0"
