--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -6,31 +6,52 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.31"
-serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.55"
 serde_with = "1.4.0"
-zip = { git = "https://github.com/Spanfile/zip-rs.git" }
 glob = "0.3.0"
 regex = "1.3.9"
 lazy_static = "1.4.0"
-fern = { version = "0.6.0", features = ["colored"] }
 log = "0.4.8"
 url = "2.1.1"
 bytes = "0.5.5"
-reqwest = { version = "0.10.6", features = ["json"] }
-tokio = { version = "0.2.21", features = ["rt-threaded", "sync", "macros", "fs", "blocking"] }
 envy = "0.4.1"
 dotenv = "0.15.0"
 async-trait = "0.1.36"
 tempfile = "3.1.0"
-chrono = { version = "0.4.11", features = ["serde"] }
 bytesize = "1.0.1"
-rusqlite =  { version = "0.23.1", features = ["chrono"] }
 num-traits = "0.2.12"
 num-derive = "0.3.0"
 strum = "0.18.0"
 strum_macros = "0.18.0"
-sha2 = "0.9.1"
+sha-1 = "0.9.1"
 hex = "0.4.2"
 
-macros = { path = "../macros" }
+[dependencies.macros]
+path = "../macros"
+
+[dependencies.serde]
+version = "1.0.114"
+features = ["derive"]
+
+[dependencies.zip]
+git = "https://github.com/Spanfile/zip-rs.git"
+
+[dependencies.fern]
+version = "0.6.0"
+features = ["colored"]
+
+[dependencies.reqwest]
+version = "0.10.6"
+features = ["json"]
+
+[dependencies.tokio]
+version = "0.2.21"
+features = ["rt-threaded", "sync", "macros", "fs", "blocking"]
+
+[dependencies.chrono]
+version = "0.4.11"
+features = ["serde"]
+
+[dependencies.rusqlite]
+version = "0.23.1"
+features = ["chrono"]
