--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -25,6 +25,7 @@ strum = "0.18.0"
 strum_macros = "0.18.0"
 sha-1 = "0.9.1"
 hex = "0.4.2"
+thiserror = "1.0.20"
 
 [dependencies.macros]
 path = "../macros"
