--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -23,7 +23,7 @@ num-traits = "0.2.12"
 num-derive = "0.3.0"
 strum = "0.18.0"
 strum_macros = "0.18.0"
-sha-1 = "0.9.1"
+blake2 = "0.9.0"
 hex = "0.4.2"
 thiserror = "1.0.20"
 
