--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -24,6 +24,7 @@ num-derive = "0.3.0"
 strum = "0.18.0"
 strum_macros = "0.18.0"
 blake2 = "0.9.0"
+sha-1 = "0.9.1"
 hex = "0.4.2"
 thiserror = "1.0.20"
 
@@ -56,3 +57,7 @@ features = ["serde"]
 [dependencies.rusqlite]
 version = "0.23.1"
 features = ["chrono"]
+
+[dependencies.digest]
+version = "0.9.0"
+features = ["alloc", "std"]
