--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -27,6 +27,7 @@ blake2 = "0.9.0"
 sha-1 = "0.9.1"
 hex = "0.4.2"
 thiserror = "1.0.20"
+futures = "0.3.5"
 
 [dependencies.macros]
 path = "../macros"
