--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.31"
-serde_json = "1.0.55"
+serde_json = "1.0.56"
 serde_with = "1.4.0"
 glob = "0.3.0"
 regex = "1.3.9"
@@ -27,7 +27,7 @@ blake2 = "0.9.0"
 sha-1 = "0.9.1"
 hex = "0.4.2"
 thiserror = "1.0.20"
-futures = "0.3.5"
+# futures = "0.3.5"
 
 [dependencies.macros]
 path = "../macros"
