--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -32,6 +32,9 @@ thiserror = "1.0.20"
 [dependencies.macros]
 path = "../macros"
 
+[dependencies.derive]
+path = "../derive"
+
 [dependencies.serde]
 version = "1.0.114"
 features = ["derive"]
