--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -28,6 +28,7 @@ sha-1 = "0.9.1"
 hex = "0.4.2"
 thiserror = "1.0.20"
 # futures = "0.3.5"
+zip = "0.5.6"
 
 [dependencies.macros]
 path = "../macros"
@@ -39,8 +40,8 @@ path = "../derive"
 version = "1.0.114"
 features = ["derive"]
 
-[dependencies.zip]
-git = "ssh://git@git.spans.me/Spanfile/zip-rs"
+# [dependencies.zip]
+# git = "ssh://git@git.spans.me/Spanfile/zip-rs"
 
 [dependencies.fern]
 version = "0.6.0"
@@ -55,7 +56,7 @@ version = "0.2.21"
 features = ["rt-threaded", "sync", "macros", "fs", "blocking"]
 
 [dependencies.chrono]
-version = "0.4.11"
+version = "0.4.13"
 features = ["serde"]
 
 [dependencies.rusqlite]
