--- a/crates/derive/Cargo.toml
+++ b/crates/derive/Cargo.toml
@@ -5,13 +5,11 @@ authors = ["Spanfile <spansdev@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+syn = "1.0.33"
 quote = "1.0.7"
 thiserror = "1.0.20"
 proc-macro2 = "1.0.18"
-
-[dependencies.syn]
-version = "1.0.33"
-features = ["full"]
+heck = "0.3.1"
 
 [lib]
 proc-macro = true
