--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -6,56 +6,56 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.31"
-serde_json = "1.0.56"
-serde_with = "1.4.0"
+async-trait = "0.1.36"
+blake2 = "0.9.0"
+bytes = "0.5.6"
+bytesize = "1.0.1"
+dotenv = "0.15.0"
+envy = "0.4.1"
+fern = "0.6.0"
 glob = "0.3.0"
-regex = "1.3.9"
+hex = "0.4.2"
 lazy_static = "1.4.0"
 log = "0.4.11"
-url = "2.1.1"
-bytes = "0.5.6"
-envy = "0.4.1"
-dotenv = "0.15.0"
-async-trait = "0.1.36"
-tempfile = "3.1.0"
-bytesize = "1.0.1"
-strum = "0.18.0"
-strum_macros = "0.18.0"
-blake2 = "0.9.0"
+regex = "1.3.9"
+serde_json = "1.0.56"
+serde_with = "1.4.0"
 sha-1 = "0.9.1"
-hex = "0.4.2"
+strum = "0.19.1"
+strum_macros = "0.19.1"
+tempfile = "3.1.0"
 thiserror = "1.0.20"
+toml = "0.5.6"
+url = "2.1.1"
 zip = "0.5.6"
-fern = "0.6.0"
 
 [dependencies.derive]
 path = "../derive"
 
 [dependencies.serde]
-version = "1.0.114"
 features = ["derive"]
+version = "1.0.114"
 
 [dependencies.reqwest]
-version = "0.10.6"
 features = ["json"]
+version = "0.10.6"
 
 [dependencies.tokio]
-version = "0.2.21"
 features = ["rt-threaded", "sync", "macros", "fs", "blocking"]
+version = "0.2.21"
 
 [dependencies.chrono]
-version = "0.4.13"
 features = ["serde"]
+version = "0.4.13"
 
 [dependencies.rusqlite]
-version = "0.23.1"
 features = ["chrono"]
+version = "0.23.1"
 
 [dependencies.digest]
-version = "0.9.0"
 features = ["alloc", "std"]
+version = "0.9.0"
 
 [dependencies.clap]
-version = "3.0.0-beta.1"
 default-features = false
-features = ["std"]
+version = "2.33.1"
