--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -19,7 +19,6 @@ lazy_static = "1.4.0"
 log = "0.4.11"
 regex = "1.3.9"
 serde_json = "1.0.56"
-serde_with = "1.4.0"
 sha-1 = "0.9.1"
 strum = "0.19.1"
 strum_macros = "0.19.1"
@@ -31,6 +30,9 @@ zip = "0.5.6"
 
 [dependencies.derive]
 path = "../derive"
+
+[dependencies.common]
+path = "../common"
 
 [dependencies.serde]
 features = ["derive"]
@@ -59,9 +61,6 @@ version = "0.9.0"
 [dependencies.clap]
 default-features = false
 version = "2.33.1"
-
-[dev-dependencies]
-tempfile = "3.1.0"
 
 [build-dependencies]
 blake2 = "0.9.0"
