--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -34,6 +34,9 @@ path = "../derive"
 [dependencies.common]
 path = "../common"
 
+[dependencies.rpc]
+path = "../rpc"
+
 [dependencies.serde]
 features = ["derive"]
 version = "1.0.114"
