--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors = ["Spanfile <spansdev@gmail.com>"]
-description = "RPC transport for Modtorio"
+description = "RPC protocol buffer specification for Modtorio"
 edition = "2018"
 name = "rpc"
 version = "0.1.0"
