--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -13,6 +13,7 @@ bytesize = "1.0.1"
 dotenv = "0.15.0"
 envy = "0.4.1"
 fern = "0.6.0"
+futures = "0.3.5"
 glob = "0.3.0"
 hex = "0.4.2"
 lazy_static = "1.4.0"
@@ -46,7 +47,7 @@ features = ["json"]
 version = "0.10.7"
 
 [dependencies.tokio]
-features = ["rt-threaded", "sync", "macros", "fs", "blocking", "process"]
+features = ["rt-threaded", "sync", "macros", "fs", "blocking", "process", "uds"]
 version = "0.2.22"
 
 [dependencies.chrono]
