--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -25,6 +25,7 @@ glob = "0.3.0"
 hex = "0.4.2"
 lazy_static = "1.4.0"
 log = "0.4.11"
+percent-encoding = "2.1.0"
 regex = "1.3.9"
 serde_json = "1.0.57"
 sha-1 = "0.9.1"
