--- a/crates/modtorio/Cargo.toml
+++ b/crates/modtorio/Cargo.toml
@@ -26,6 +26,7 @@ hex = "0.4.2"
 lazy_static = "1.4.0"
 log = "0.4.11"
 percent-encoding = "2.1.0"
+
 regex = "1.3.9"
 serde_json = "1.0.57"
 sha-1 = "0.9.1"
@@ -76,6 +77,10 @@ version = "2.33.3"
 
 [dependencies.tonic]
 features = ["tls"]
+version = "0.3.0"
+
+[dependencies.refinery]
+features = ["rusqlite"]
 version = "0.3.0"
 
 [build-dependencies]
