--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,11 @@
 image: rustlang/rust:nightly
 
 build:
+  stage: build
   script:
     - cargo build
+
+test:
+  stage: test
+  script:
+    - cargo test
