--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -11,4 +11,4 @@ prost = "0.6.1"
 tonic = {version = "0.3.1", features = ["prost"]}
 
 [build-dependencies]
-tonic-build = "0.3.1"
+tonic-build = {version = "0.3.1", default-features = false, features = ["prost", "transport"]}
